// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendering HeroForm should render HeroForm with empty user 1`] = `
Array [
  <div
    class="parallax"
  />,
  <div
    className="heroDiv"
  >
    <h1>
      heroWelcome
       
      <span />
    </h1>
  </div>,
]
`;

exports[`Rendering HeroForm should render HeroForm with user Hallo42 1`] = `
Array [
  <div
    class="parallax"
  />,
  <div
    className="heroDiv"
  >
    <h1>
      heroWelcome
       
      <span>
        Hallo42
      </span>
    </h1>
  </div>,
]
`;
